--- a/www/wp-content/themes/taliia-yunayk/style.css
+++ b/www/wp-content/themes/taliia-yunayk/style.css
@@ -9,3 +9,22 @@ Author URI: https://wsp24.ru
 Description: Индивидуальный шаблон
 Version: 4.0
 */ 
+header {
+	margin-top: 20px;
+}
+header .phone{
+	font-size: 18px;
+	font-weight: bold;
+	    display: table-cell;
+    vertical-align: middle;
+}
+
+#header > .cnt {
+    display: table;
+}
+.logo img {
+	width: 80%;
+}
+#menu li.current-menu-item a {
+	box-shadow: inset 0 -3px 0 0 #536F1E;
+}
