--- a/www/wp-content/themes/taliia-yunayk/style.css
+++ b/www/wp-content/themes/taliia-yunayk/style.css
@@ -101,3 +101,12 @@ a:hover {
     display: inline-block;
     vertical-align: top;
 }
+#steps{
+    padding: 25px 0;
+}
+#steps h3, #steps p{
+    color: #ffffff;    
+}
+ #steps h4{
+   color: #ffc500;
+}
