--- a/www/wp-content/themes/taliia-yunayk/style.css
+++ b/www/wp-content/themes/taliia-yunayk/style.css
@@ -203,7 +203,7 @@ footer {
     float: left;
     width: 40%;
 
-    margin-right: 25px;
+    margin-right: 40px;
 }
 
 .image-post img {
@@ -213,8 +213,15 @@ footer {
 }
 
 .post-content {
-    width: calc(60% - 25px);
+    width: calc(60% - 40px);
     float: left;
+    display: table;
+    height: 260px;
+}
+.post-content > div{
+    display: table-cell;
+    vertical-align: middle;
+
 }
 
 .title1 {
@@ -229,4 +236,71 @@ footer {
 .block-post {
     margin: 30px 0;
     overflow: hidden;
+}
+.price {
+    margin: 20px 0;
+}
+.textwidget {
+    margin-bottom: 50px;
+    font-size: 13px !important;
+    text-transform: none !important;
+    letter-spacing: 0 !important;
+    font-weight: normal !important;
+    font-family: 'Play', sans-serif !important;
+}
+
+.textwidget li {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    list-style-type: none;
+    line-height: 30px;
+}
+
+.textwidget a:before {
+    content: "\f0a9";
+    display: inline-block;
+    font-family: FontAwesome;
+    margin-right: 8px;
+}
+.cat-item {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    list-style-type: none;
+    line-height: 30px;
+}
+
+.cat-item a:before{
+    content: "\f0a9";
+    display: inline-block;
+    font-family: FontAwesome;
+    margin-right: 8px;
+}
+#sidebar{
+    padding-top: 100px;
+}
+#sidebar > div {
+    display: block !important;
+        margin: 0 0 20px;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    padding: 0;
+    font-family: 'Open Sans';
+    color: #96C845;
+}
+#sidebar > div:after{
+    content: '';
+    display: block;
+    width: 100px;
+    height: 1px;
+    background: #dcdcdc;
+    margin-top: 20px;
+}
+
+#path {
+    background: url(../../uploads/2018/05/41.png) center no-repeat !important;
+    background-size: cover !important;
 }
