--- a/www/wp-content/themes/taliia-yunayk/style.css
+++ b/www/wp-content/themes/taliia-yunayk/style.css
@@ -323,7 +323,7 @@ border-radius: 5px;
 background: #357542;
 width: 25%;
 margin:0 auto;
-margin-bottom: 20px;
+margin-top: 10px;
 }
 .form input:not([type="image"]), .form textarea {
 box-sizing: border-box;
@@ -348,6 +348,13 @@ transition: all .3s ease;
 	margin: 0 5px;
 }
 
-.form input{
-	
+.form div.wpcf7-response-output {
+    margin: 0.5em 0.5em 1em!important;
+}
+.form{
+        margin: 0!important;
+}
+
+.block button {
+    background: none;
 }
