--- a/www/wp-content/themes/taliia-yunayk/style.css
+++ b/www/wp-content/themes/taliia-yunayk/style.css
@@ -366,6 +366,7 @@ footer {
 
 .page-content {
     clear: both;
+    padding-top: 25px;
 }
 
 .sidebar-mobile {
@@ -373,7 +374,7 @@ footer {
 }
 
 @media only screen and (max-width: 780px) {
-    .mobile-content {
+    .mobile-content, .tablet {
         display: none;
     }
     .post-content {
@@ -398,7 +399,7 @@ footer {
         width: 98%;
     }
     .sidebar-content {
-        width: 75% !important;
+        width: 75%;
     }
     #sidebar {
         width: 25% !important;
@@ -433,22 +434,19 @@ footer {
 }
 
 @media only screen and (max-width: 480px){
-    #sidebar, footer div:first-child, #otzivi, #slider, .menu-main li:not(:last-child):after, .menu-main li:nth-child(2), .menu-main li:nth-child(3), .phone span, #steps{
+    #sidebar, footer div:first-child, #otzivi, #slider, .menu-main li:not(:last-child):after, .menu-main li:nth-child(2), .menu-main li:nth-child(3), .phone span:nth-child(2), #steps{
         display: none;
     }
     .sidebar-mobile {
         display: block;
     }
 
-    .phone a:before {
-      content: "\e942";        
-  }
   .logo img {
     width: 90%;
     }
 
     .phone {
-        font-size: 30px !important;
+        font-size: 23px !important;
     }
 
     .menu-icon .fa {
@@ -459,6 +457,10 @@ footer {
         border-bottom: 1px solid #606060;
         margin-bottom: 20px;
     }
+
+     .menu-main li:first-child {
+        width: 208px!important;
+     }
 
     #category .category, footer > div, .sidebar-content, .image-post, .post-content {
         width: 100%;
